<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".aquaman">
    <RelativeLayout
            android:id="@+id/image_holder"
            android:layout_width="match_parent"
            android:elevation="10dp"
            android:layout_height="240dp" tools:targetApi="lollipop">

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardPreventCornerOverlap="true"
        >

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/aquaman2"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/movie_card"
            />
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <android.support.v7.widget.CardView
                        app:cardCornerRadius="5dp"
                        app:cardElevation="10dp"
                        android:layout_width="130dp"
                        android:layout_height="140dp"
                        android:layout_weight="1"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="-15dp"
                        android:layout_gravity="center_vertical">
                    <ImageView
                            android:contentDescription="@string/movie_card"
                            android:scaleType="centerCrop"
                            app:srcCompat="@mipmap/aquaman"
                            android:id="@+id/imageView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                    />
                </android.support.v7.widget.CardView>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:orientation="vertical"
                        android:paddingStart="10dp"
                        android:layout_marginTop="50dp">
                    <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textSize="19sp"
                            android:textColor="#fff"
                            android:text="@string/aquaman"
                            android:fontFamily="@font/pt_sans_bold"
                            android:id="@+id/textView6"
                    />
                    <TextView
                            android:layout_marginEnd="5dp"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textSize="16sp"
                            android:textColor="#fff"
                            android:text="@string/aquaman_desc"
                            android:fontFamily="@font/pt_sans_reg"
                            android:id="@+id/textView7"
                    />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
            android:elevation="15dp"
            android:id="@+id/text_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:background="@drawable/dark_bg"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:targetApi="lollipop"
            android:layout_alignParentStart="true" android:layout_alignParentTop="true"
            android:layout_marginTop="206dp">

        <RatingBar
                android:isIndicator="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/aquaman_rating"
                android:numStars="5"
                android:progressTint="#FDC828"
                android:progressBackgroundTint="#fff"
                tools:targetApi="lollipop"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:clickable="true" android:focusable="true"
                android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
                android:layout_marginTop="38dp"/>
        <LinearLayout
                android:background="@drawable/background_dark"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="10dp" android:layout_alignParentStart="true"
                android:layout_below="@+id/aquaman_rating">
            <EditText
                    android:textAlignment="center"
                    android:background="@android:color/transparent"
                    android:hint="@string/review"
                    android:textColorHint="#fff"
                    android:textColor="#fff"
                    android:fontFamily="@font/pt_sans_reg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/aquaman_review"
                    android:layout_weight="1"/>
        </LinearLayout>
        <Button
                android:onClick="submitReview2"
                android:text="@string/submit"
                android:layout_width="244dp"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:background="@drawable/login_btn" android:textColor="#fff"
                android:fontFamily="@font/pt_sans_reg" android:textSize="15sp" tools:targetApi="jelly_bean"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="101dp" android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton

            app:rippleColor="#fff"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:elevation="20dp"
            android:src="@drawable/ic_fav"
            app:pressedTranslationZ="12dp"
            app:layout_anchor="@id/image_holder"
            app:layout_anchorGravity="bottom|center"
            app:backgroundTint="#26272B"
            android:layout_marginTop="-20dp"
            android:layout_alignTop="@id/text_holder"
            android:layout_centerHorizontal="true"/>
</RelativeLayout
>