<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".movie_homepage">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="?attr/colorPrimaryDark"
        >

            <ImageView
                    app:layout_collapseMode="parallax"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/movie_card"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/bgd"/>

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:title="@string/movies"
                    app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:background="@color/colorPrimaryDark"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sds"
                android:orientation="vertical">
            <android.support.v7.widget.CardView
                    app:cardBackgroundColor="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    tools:targetApi="lollipop"
                    android:onClick="goto_johnwick">

                <LinearLayout
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="130dp"
                            android:contentDescription="@string/movie_card"
                            app:srcCompat="@mipmap/johnwick"
                            android:scaleType="centerCrop"/>
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:padding="7dp"
                                  android:orientation="vertical"
                    >
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView10"
                                android:text="@string/johnwick"
                                android:textAppearance="@android:style/TextAppearance.Material.Display1"
                                android:textColor="#fff"
                                android:fontFamily="@font/pt_sans_reg"
                                tools:targetApi="lollipop"
                                android:textSize="15sp"
                                android:layout_marginStart="5dp"/>
                        <RatingBar
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/ratingBar3" android:numStars="5"
                                android:layout_marginStart="3dp" style="@style/Widget.AppCompat.RatingBar.Small"
                                android:rating="5" android:clickable="false" android:longClickable="false"/>
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                    app:cardBackgroundColor="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    tools:targetApi="lollipop"
                    android:onClick="goto_captainmarvel">

                <LinearLayout
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="130dp"
                            android:contentDescription="@string/movie_card"
                            app:srcCompat="@mipmap/captainmarvel"
                            android:scaleType="centerCrop"/>
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:padding="7dp"
                                  android:orientation="vertical"
                    >
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView11"
                                android:text="@string/marvel"
                                android:textAppearance="@android:style/TextAppearance.Material.Display1"
                                android:textColor="#fff"
                                android:fontFamily="@font/pt_sans_reg"
                                tools:targetApi="lollipop"
                                android:textSize="15sp"
                                android:layout_marginStart="5dp"/>
                        <RatingBar
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/ratingBar4" android:numStars="5"
                                android:layout_marginStart="3dp" style="@style/Widget.AppCompat.RatingBar.Small"
                                android:rating="5" android:clickable="false" android:longClickable="false"/>
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                    app:cardBackgroundColor="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    tools:targetApi="lollipop"
                    android:onClick="goto_aquaman">

                <LinearLayout
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="130dp"
                            android:contentDescription="@string/movie_card"
                            app:srcCompat="@mipmap/aquaman"
                            android:scaleType="centerCrop"/>
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:padding="7dp"
                                  android:orientation="vertical"
                    >
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView12"
                                android:text="@string/aquaman"
                                android:textAppearance="@android:style/TextAppearance.Material.Display1"
                                android:textColor="#fff"
                                android:fontFamily="@font/pt_sans_reg"
                                tools:targetApi="lollipop"
                                android:textSize="15sp"
                                android:layout_marginStart="5dp"/>
                        <RatingBar
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/ratingBar5" android:numStars="5"
                                android:layout_marginStart="3dp" style="@style/Widget.AppCompat.RatingBar.Small"
                                android:rating="5" android:clickable="false" android:longClickable="false"/>
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                    app:cardBackgroundColor="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    tools:targetApi="lollipop"
                    android:onClick="goto_godzilla">

                <LinearLayout
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="130dp"
                            android:contentDescription="@string/movie_card"
                            app:srcCompat="@mipmap/godzilla"
                            android:scaleType="centerCrop"/>
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:padding="7dp"
                                  android:orientation="vertical"
                    >
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView13"
                                android:text="@string/godzilla"
                                android:textAppearance="@android:style/TextAppearance.Material.Display1"
                                android:textColor="#fff"
                                android:fontFamily="@font/pt_sans_reg"
                                tools:targetApi="lollipop"
                                android:textSize="15sp"
                                android:layout_marginStart="5dp"/>
                        <RatingBar
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/ratingBar6" android:numStars="5"
                                android:layout_marginStart="3dp" style="@style/Widget.AppCompat.RatingBar.Small"
                                android:rating="5" android:clickable="false" android:longClickable="false"/>
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
            android:scaleType="centerCrop"
            app:rippleColor="#fff"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:elevation="6dp"
            android:src="@drawable/ic_fav2"
            app:pressedTranslationZ="12dp"
            app:layout_anchor="@id/app_bar_layout"
            app:layout_anchorGravity="bottom|right"
            android:layout_marginEnd="20dp" app:backgroundTint="#26272B"/>

</android.support.design.widget.CoordinatorLayout>